# rust-oj

./: .gitignore  Cargo.toml
src/: config.rs  delete_jobs.rs  evaluate.rs  evaluate_mq.rs  get_contests.rs  get_contests_by_id.rs  get_jobs.rs  get_jobs_by_id.rs  get_ranklist.rs  get_users.rs  main.rs  option.rs  post_contests.rs  post_jobs.rs  post_users.rs  put_jobs_by_id.rs  stru.rs  yaml.yml
src/data/: job.json
src/ui/: index.html  postJobs.html  ranklist.html
